syntax = "proto3";

option go_package = "github.com/pastelnetwork/gonode/proto/walletnode";

package walletnode;

service DownloadArtwork {
    // Download downloads artwork by given txid, timestamp and signature.
    rpc Download(DownloadRequest) returns (stream DownloadReply);
}

message DownloadRequest {
    string txid = 1;
    string timestamp = 2;
    string signature = 3;
    string ttxid = 4;
}
message DownloadReply {
    bytes file = 1;
}
